Fix missing spacing above resource panels in blog

--- a/website/src/page/blog/blog-row.component.scss
+++ b/website/src/page/blog/blog-row.component.scss
@@ -216,7 +216,7 @@ td-aspect-ratio {
     }
 }
 
-td-heading-with-highlights + td-link-panels {
+td-heading-with-highlights + td-resource-panels {
     display: block;
     margin-top: 24px;
 }
